--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -19,3 +19,12 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
+.buttonsRow{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.categoryButton{
+    text-transform: none;
+    color: gray;
+}
