--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -28,10 +28,25 @@
       <ion-icon name="download-outline" class="productsIcon" (click)="presentAlert()"></ion-icon>
     </ion-item>
 
-    <ion-searchbar placeholder="Buscar"></ion-searchbar>
+    <ion-row class="buttonsRow">
+      <ion-button color="none" class="categoryButton" (click)="filterByValue('name', '')">
+        Todos
+        <ion-icon name="list-outline" slot="end"></ion-icon>
+      </ion-button>&nbsp;
+      <ion-button color="none" class="categoryButton" (click)="filterByValue('category', 'Bebida')">
+        Bebidas
+        <ion-icon name="cafe-outline" slot="end"></ion-icon>
+      </ion-button>&nbsp;
+      <ion-button color="none" class="categoryButton" (click)="filterByValue('category', 'Comida')">
+        Comida
+        <ion-icon name="fast-food-outline" slot="end"></ion-icon>
+      </ion-button>
+    </ion-row>
+
+    <ion-searchbar placeholder="Buscar" (ionChange)="search($event)"></ion-searchbar>
   
     <ion-list *ngIf="status == 'with data'">
-      <ion-item button (click)="getProductData(item); presentModalProductDetail()" *ngFor="let item of products">
+      <ion-item button (click)="getProductData(item); presentModalProductDetail()" *ngFor="let item of products | filtro: textToSearch: keyToFilter">
         <ion-icon name="list-circle-outline" slot="start"></ion-icon>
         <ion-label>{{item.name}}</ion-label>
         <ion-icon name="ellipsis-vertical-outline" slot="end"></ion-icon>
